[FIX] AI response 및 request 수정